<resources>
    <string name="app_name">Bluetooth Diagnostics</string>
    //Menu
    <string name="help">Help</string>
    <string name="connect">Connect</string>
    <string name="contact">Contact</string>
    <string name="gmaps">Google Maps</string>
    //Commands
    <string name="detect_protocol">Detect Protocol</string>
    <string name="get_supported_pid_s">GET SUPPORTED SUBFUNCTIONS</string>
    <string name="get_dtc_number">GET DTC NUMBER</string>
    <string name="get_dtc_codes">GET DTC CODES</string>
    <string name="clear_dtc_s">CLEAR DTC\'S</string>
    <string name="battery_voltage">Battery Voltage</string>
    <string name="help_for_user_to_understand_the_commands">Help for user to understand the commands</string>
    //Descriptions
    <string name="description_pid">Description get Supported Subfunctions\n\nThis command will notify you about the supported diagnostic parameter id\'s in your car. This translates into real time data like: engine load, speed, coolant temperatures etc…\n
    \nFunctionality:\n
    1. Press the button -> The supported subfunctions will be printed.\n
    2. Press and hold (After initial press) -> Important real time data will be printed.
    </string>
    <string name="description_get_dtc_number">This command will print out the number of emission related DTC.\n\nThe purpose is to select this command before reading the actual dtc\'s to know if we will have something to read.\n</string>
    <string name="read_dtc_description">This command will read the emission related DTC\'s from your car and display them in a human readable mode.\n\nThis is done with the help of a integrated database of DTC\'s inside the app.\n</string>
    <string name="commands">Commands</string>
    <string name="clear_dtc_description">This command will clear all the emission related DTC\'s.\n\nKeep in mind that it also clears the MIL of the car and some calibration data.\n</string>
    <string name="description_detect_protocol">This command will detect the protocol your car is using for diagnostics like CAN, KWP2000, J1850 VPW, J1850 PWM etc…\n</string>
    <string name="description_get_battery_voltage">This command will detect the current battery voltage with an accuracy up to +-2%, without additional calibration.\n </string>
    <string name="show_more">Show more</string>
    <string name="show_more_details">Show more details</string>
    <string name="pid_desc">PID\'s Description presented in Hexadecimal\n\n02 - Freeze DTC\n03 - Fuel System Status\n04 - Engine Load\n05-Engine Coolant Temperature\n06 - Short term fuel trim-Bank 1\n07 - Long term fuel trim—Bank 1\n08 - Short term fuel trim—Bank 2\n09 - Long term fuel trim—Bank 2\n0A - Fuel pressure\n0B - Intake manifold absolute pressure\n0C - Engine Speed\n0D - Vehicle Speed\n0E - Timing advance\nOF - Intake air temperature\n10 - Mass air flow sensor (MAF) air flow rate\n11 - Throttle position\n12 - Commanded secondary air status\n13 - Oxygen sensors present (in 2 banks)\n14 - Oxygen Sensor 1\n15 - Oxygen Sensor 2\n16 - Oxygen Sensor 3\n17 - Oxygen Sensor 4\n18 - Oxygen Sensor 5\n19 - Oxygen Sensor 6\n1A - Oxygen Sensor 7\n1B - Oxygen Sensor 8\n1C - OBD standards this vehicle conforms to\n1D - Oxygen sensors present (in 4 banks)\n1E - Auxiliary input status\n1F - Run time since engine start\n20 - PIDs supported [$21 - $40]\n</string>
    <string name="console">CONSOLE</string>
    <string name="insert_command">Insert command…</string>
    <string name="send_command">Send Command</string>
    <string name="cancel">Cancel</string>
    <string name="alert_dialog_desc">Here you can send additional OBD2 commands and get the raw response.</string>
    <string name="title_get_dtcnb">Description get number of DTC\'s</string>
    <string name="title_read_dtc">Description read DTC\'s</string>
    <string name="title_clear_dtc">Description clear DTC\'s</string>
    <string name="title_detect_protocol">Description detect protocol</string>
    <string name="title_get_battery_voltage">Description get battery voltage</string>
    //Contact page
    <string name="email_desc">Mail me at:</string>
    <string name="email">riccardo.isac@student.upt.ro</string>
    <string name="phone_desc">Phone number:</string>
    <string name="phone_number">+40753018898</string>
    <string name="fb_desc">Facebook account:</string>
    <string name="fb_account">Riccardo Isac</string>
    <string name="li_desc">LinkedIn account:</string>
    <string name="li_account">Riccardo Isac</string>
</resources>
