<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/dialog_bck">

    <TextView
        android:id="@+id/TitleAlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/console"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:ems="10"
        android:hint="@string/insert_command"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:id="@+id/btnSend"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/send_command"
        android:textColor="@android:color/white"
        android:fontFamily="@font/work_sans_medium"
        app:cornerRadius="10dp"/>

</LinearLayout>